Add implementation and use up to date unirest version

--- a/wiremock/pom.xml
+++ b/wiremock/pom.xml
@@ -41,10 +41,17 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.mashape.unirest</groupId>
-			<artifactId>unirest-java</artifactId>
-			<version>1.4.9</version>
+			<groupId>com.konghq</groupId>
+			<artifactId>unirest-java-core</artifactId>
+			<version>4.4.5</version>
+			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.konghq</groupId>
+			<artifactId>unirest-objectmapper-jackson</artifactId>
+			<version>4.2.9</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
