refactor: changed from wiremock to triptop

--- a/triptop/pom.xml
+++ b/triptop/pom.xml
@@ -52,6 +52,18 @@
 			<artifactId>spring-dotenv</artifactId>
 			<version>4.0.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.konghq</groupId>
+			<artifactId>unirest-java-core</artifactId>
+			<version>4.4.5</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.konghq</groupId>
+			<artifactId>unirest-objectmapper-jackson</artifactId>
+			<version>4.2.9</version>
+		</dependency>
 	</dependencies>
 
 	<build>
