--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ booking-api/response.json
 triptop/src/main/resources/application.properties
 triptop/src/main/resources/application.properties
 *.properties
+triptop/src/main/resources/application.properties
