--- a/triptop/src/main/resources/application.properties
+++ b/triptop/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 spring.application.name=triptop
-stripe.api_key=${STRIPE.API_KEY}
+# Booking.com API configuration
+booking.api.key=01fcc8ef7dmsh9371396917f2b4fp187e1ejsn778fecdf4de9
+booking.api.host=booking-com15.p.rapidapi.com
+booking.api.baseUrl=https://booking-com15.p.rapidapi.com/api/v1/hotels
+
+# TripAdvisor API configuration
+tripadvisor.api.key=01fcc8ef7dmsh9371396917f2b4fp187e1ejsn778fecdf4de9
+tripadvisor.api.host=tripadvisor16.p.rapidapi.com
+tripadvisor.api.baseUrl=https://tripadvisor16.p.rapidapi.com/api/v1/restaurant
+
+# Flight API configuration
+flight.api.key=mock-api-key
+flight.api.host=kk039.wiremockapi.cloud
+flight.api.baseUrl=https://kk039.wiremockapi.cloud/shopping
