99% working code, also like 5k lines of code in one commit :)

--- a/triptop/src/main/resources/application.properties
+++ b/triptop/src/main/resources/application.properties
@@ -13,3 +13,10 @@ tripadvisor.api.baseUrl=https://tripadvisor16.p.rapidapi.com/api/v1/restaurant
 flight.api.key=mock-api-key
 flight.api.host=kk039.wiremockapi.cloud
 flight.api.baseUrl=https://kk039.wiremockapi.cloud/shopping
+
+# Stripe API configuration
+stripe.apiKey=${STRIPE_APIKEY}
+
+# PayPal API configuration
+paypal.api.clientId=${PAYPAL_CLIENTID}
+paypal.api.secret=${PAYPAL_SECRET}
