ADR updated and added patterns to 6. Principles

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,4 @@ triptop/src/main/resources/application.properties
 triptop/src/main/resources/application.properties
 *.properties
 triptop/src/main/resources/application.properties
+software-guidebook/mockupvooronzepatterns.md
